--- a/src/css/main.css
+++ b/src/css/main.css
@@ -50,7 +50,7 @@ body {
 .wrapper {
   max-width: 1120px;
   width: 100%;
-  padding: var(--top-wrapper-space) 30px 10px;
+  padding: var(--top-wrapper-space) 0 10px;
   margin: 0 auto;
   min-height: 75vh;
 }
@@ -199,3 +199,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 /*# sourceMappingURL=main.css.map */
+
+.accordion-body {
+    padding: 10px 0;
+}
